Fix uploaded images overflow

--- a/src/components/views/Post/Post.module.scss
+++ b/src/components/views/Post/Post.module.scss
@@ -10,6 +10,7 @@
 
   .image {
     height: 100%;
+    max-width: 100%;
     object-fit: cover;
     margin: 0 auto;
     display: block;
